--- a/src/main/pages/accountnumber.html
+++ b/src/main/pages/accountnumber.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>折多多</title>
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/accountnumber.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
-    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <link rel="stylesheet" href="/src/main/css/main.css">
+    <link rel="stylesheet" href="/src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="/src/main/css/person.css">
+    <link rel="stylesheet" href="/src/main/css/accountnumber.css">
+    <link rel="stylesheet" href="/src/main/css/iconfont.css">
+    <script src="/src/main/layui/layui.js"></script>
 </head>
 <style>
     .layui-tab {
@@ -27,15 +26,16 @@
 </style>
 
 <body>
+
     <div class="banner" role="banner">
-        <header id="header">
+        <div id="header">
             <div class="header-content clearfix">
                 <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
-                        <li><a href="/hello-ghpages/index.html" onclick="firstPage()" title="折多多">首页</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/register.html">注册</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/login.html">登陆</a></li>
+                        <li><a href="/index.html" onclick="firstPage()" title="折多多">首页</a></li>
+                        <li><a href="/src/main/pages/register.html">注册</a></li>
+                        <li><a href="/src/main/pages/login.html">登陆</a></li>
                         <!--
 <li><a href="#overview">花生日记是什么</a></li>
 <li><a href="#reg">如何注册</a></li>
@@ -48,79 +48,81 @@
                 <a href="#" class="nav-toggle">菜单<span></span></a>
             </div>
 
-        </header>
+        </div>
 
-        <div style="height: 200px"></div>
+        <div style="height: 96px"></div>
         <div class="Sj-person">
-            <div class="left-person">
-                <div class="first_person">
-                    <a class="first_person_a" href="/hello-ghpages/src/main/pages/person.html"> 个人中心首页</a>
-                </div>
-                <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                    <li class="layui-nav-item ">
-                        <a href="javascript:;">精选试用管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/adversting.html">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/activities.html">全部活动</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">折扣试用管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/introduce.html">模式介绍</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/discounts.html">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/disactive.html">全部活动</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">我的账户</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/management.html">店铺管理</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/putforward.html">提现/账户明细</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/accountnumber.html">我的提现账号</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/safey.html">账户安全</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/recharge.html">账户充值</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">VIP通道</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/tovip.html">成为VIP</a></dd>
-                        </dl>
-                    </li>
-                </ul>
-            </div>
-            <div class="right_person">
-                <div class="accountNum">
-                    <div class="accountNumTitle">
-                        <strong>我的提现账号</strong>
-                        <button onclick="toPutforward()">提现</button>
+            <div class="total_total">
+                <div class="left-person">
+                    <div class="first_person">
+                        <a class="first_person_a" href="/src/main/pages/person.html"> 个人中心首页</a>
                     </div>
-                    <div class="accountNumContent">
-                        <div class="accountNumhead">
-                            <img src="/hello-ghpages/src/main/images/login.png">
-                            <span>当前账号:暂无提现账号</span>
+                    <ul class="layui-nav layui-nav-tree" lay-filter="test">
+                        <li class="layui-nav-item ">
+                            <a href="javascript:;">精选试用管理</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/adversting.html">发布活动</a></dd>
+                                <dd><a href="/src/main/pages/activities.html">全部活动</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">折扣试用管理</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/introduce.html">模式介绍</a></dd>
+                                <dd><a href="/src/main/pages/discounts.html">发布活动</a></dd>
+                                <dd><a href="/src/main/pages/disactive.html">全部活动</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">我的账户</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/management.html">店铺管理</a></dd>
+                                <dd><a href="/src/main/pages/putforward.html">提现/账户明细</a></dd>
+                                <dd><a href="/src/main/pages/accountnumber.html">我的提现账号</a></dd>
+                                <dd><a href="/src/main/pages/safey.html">账户安全</a></dd>
+                                <dd><a href="/src/main/pages/recharge.html">账户充值</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">VIP通道</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/tovip.html">成为VIP</a></dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right_person">
+                    <div class="accountNum">
+                        <div class="accountNumTitle">
+                            <strong>我的提现账号</strong>
+                            <button onclick="toPutforward()">提现</button>
                         </div>
-                        <div class="userMsg">
-                            <div class="payNum">
-                                <font>*请输入支付宝账号:</font>
-                                <input type="text" />
-                                <span>(支付宝账号必须为邮箱或手机) </span>
+                        <div class="accountNumContent">
+                            <div class="accountNumhead">
+                                <img src="/src/main/images/login.png">
+                                <span>当前账号:暂无提现账号</span>
                             </div>
-                            <div class="payName">
-                                <font>*支付宝收款人姓名:</font>
-                                <input type="text" placeholder="请输入您绑定支付宝用户姓名" />
+                            <div class="userMsg">
+                                <div class="payNum">
+                                    <font>*请输入支付宝账号:</font>
+                                    <input type="text" />
+                                    <span>(支付宝账号必须为邮箱或手机) </span>
+                                </div>
+                                <div class="payName">
+                                    <font>*支付宝收款人姓名:</font>
+                                    <input type="text" placeholder="请输入您绑定支付宝用户姓名" />
+                                </div>
+                                <div class="payPhone">
+                                    <font>*您绑定的手机号:</font>
+                                    <span class="phoneNum">1789544220</span>
+                                </div>
+                                <button class="cp">免费获取验证码</button>
+                                <div class="payCapta">
+                                    <font>*请输入您收到的验证码:</font>
+                                    <input type="text" />
+                                </div>
+                                <button class="sub">提交</button>
                             </div>
-                            <div class="payPhone">
-                                <font>*您绑定的手机号:</font>
-                                <span class="phoneNum">1789544220</span>
-                            </div>
-                            <button class="cp">免费获取验证码</button>
-                            <div class="payCapta">
-                                <font>*请输入您收到的验证码:</font>
-                                <input type="text" />
-                            </div>
-                            <button class="sub">提交</button>
                         </div>
                     </div>
                 </div>
@@ -162,9 +164,8 @@
     })
 
     function toPutforward() {
-        window.location.href = "/hello-ghpages/src/main/pages/putforward.html";
+        window.location.href = "/src/main/pages/putforward.html";
     }
 </script>
 
 </html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
