--- a/src/main/pages/discounts.html
+++ b/src/main/pages/discounts.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>折多多</title>
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/discounts.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
-    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
-    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <link rel="stylesheet" href="/src/main/css/main.css">
+    <link rel="stylesheet" href="/src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="/src/main/css/person.css">
+    <link rel="stylesheet" href="/src/main/css/discounts.css">
+    <link rel="stylesheet" href="/src/main/css/iconfont.css">
+    <script src="/src/main/js/jquery.min.js"></script>
+    <script src="/src/main/layui/layui.js"></script>
 </head>
 <style>
     .right_person {
@@ -36,9 +35,9 @@
                 <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
-                        <li><a href="/hello-ghpages/index.html" onclick="firstPage()" title="折多多">首页</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/register.html">注册</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/login.html">登陆</a></li>
+                        <li><a href="/index.html" onclick="firstPage()" title="折多多">首页</a></li>
+                        <li><a href="/src/main/pages/register.html">注册</a></li>
+                        <li><a href="/src/main/pages/login.html">登陆</a></li>
                         <!--
 <li><a href="#overview">花生日记是什么</a></li>
 <li><a href="#reg">如何注册</a></li>
@@ -53,144 +52,146 @@
 
         </header>
 
-        <div style="height: 200px"></div>
+        <div style="height: 96px"></div>
         <div class="Sj-person">
-            <div class="left-person">
-                <div class="first_person">
-                    <a class="first_person_a" href="/hello-ghpages/src/main/pages/person.html"> 个人中心首页</a>
+            <div class="total_total">
+                <div class="left-person">
+                    <div class="first_person">
+                        <a class="first_person_a" href="/src/main/pages/person.html"> 个人中心首页</a>
+                    </div>
+                    <ul class="layui-nav layui-nav-tree" lay-filter="test">
+                        <li class="layui-nav-item ">
+                            <a href="javascript:;">精选试用管理</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/adversting.html">发布活动</a></dd>
+                                <dd><a href="/src/main/pages/activities.html">全部活动</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">折扣试用管理</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/introduce.html">模式介绍</a></dd>
+                                <dd><a href="/src/main/pages/discounts.html">发布活动</a></dd>
+                                <dd><a href="/src/main/pages/disactive.html">全部活动</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">我的账户</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/management.html">店铺管理</a></dd>
+                                <dd><a href="/src/main/pages/putforward.html">提现/账户明细</a></dd>
+                                <dd><a href="/src/main/pages/accountnumber.html">我的提现账号</a></dd>
+                                <dd><a href="/src/main/pages/safey.html">账户安全</a></dd>
+                                <dd><a href="/src/main/pages/recharge.html">账户充值</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">VIP通道</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/tovip.html">成为VIP</a></dd>
+                            </dl>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                    <li class="layui-nav-item ">
-                        <a href="javascript:;">精选试用管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/adversting.html">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/activities.html">全部活动</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">折扣试用管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/introduce.html">模式介绍</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/discounts.html">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/disactive.html">全部活动</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">我的账户</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/management.html">店铺管理</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/putforward.html">提现/账户明细</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/accountnumber.html">我的提现账号</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/safey.html">账户安全</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/recharge.html">账户充值</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">VIP通道</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/tovip.html">成为VIP</a></dd>
-                        </dl>
-                    </li>
-                </ul>
-            </div>
-            <div class="right_person">
-                <div class="discounts">
-                    <div class="rp">
-                        <h2 class="title">发布折扣试用</h2>
-                    </div>
-                    <div class="platformType">
-                        <div class="platformTypeTitle"><span>*</span>平台类型:</div>
-                        <div class="platformTypeName">
-                            <ul>
-                                <li class="t_li" onclick="switchTb()">
-                                    <i class="iconfont icon-taobaowang" id="tttbbb" style="font-size: 35px;"></i>
-                                </li>
-                                <li style="margin-left: 100px;" onclick="switchJd()">
-                                    <i class="iconfont icon-jingdongshangchengpingtai" id="jjjddd" style="font-size: 35px;"></i>
-                                </li>
-                            </ul>
+                <div class="right_person">
+                    <div class="discounts">
+                        <div class="rp">
+                            <h2 class="title">发布折扣试用</h2>
                         </div>
-                    </div>
-                    <div class="activityType">
-                        <div class="z_activityType">
-                            <div class="activityTypeTitle">
-                                <span class="aT">活动类型:</span>
-                            </div>
-                            <div class="layui-tab">
-                                <ul class="layui-tab-title">
-                                    <li class="layui-this">爆款打造/维护</li>
-                                    <li>新品优化综合权重</li>
-                                    <li>高客单精准打造爆款（全面优化店铺权重）</li>
-                                    <li>新人必中</li>
+                        <div class="platformType">
+                            <div class="platformTypeTitle"><span>*</span>平台类型:</div>
+                            <div class="platformTypeName">
+                                <ul>
+                                    <li class="t_li" onclick="switchTb()">
+                                        <i class="iconfont icon-taobaowang" id="tttbbb" style="font-size: 35px;"></i>
+                                    </li>
+                                    <li style="margin-left: 100px;" onclick="switchJd()">
+                                        <i class="iconfont icon-jingdongshangchengpingtai" id="jjjddd" style="font-size: 35px;"></i>
+                                    </li>
                                 </ul>
-                                <div class="layui-tab-content">
-                                    <div class="layui-tab-item layui-show">
-                                        <h4><i class="iconfont icon-select"></i>快速优化关键词排名/加购率/多天回访率/全维度UV价值</h4>
-                                        <ul>
-                                            <li id="taobao1">
-                                                <p class="gray">适合店铺类型：</p>
-                                                <p class="taobaos">有一定销量/流量的店铺</p>
-                                                <p class="taobaos">店铺人群标签混乱</p>
-                                                <p class="taobaos">日常宝贝转化率低于行业均值</p>
-                                                <p class="taobaos">排名不稳定</p>
-                                            </li>
-                                            <li class="red">
-                                                <p>效果建议投放单期总份数：</p>
-                                                <p>小于50元客单（0-50元）≥<em class="alt-num">30</em>份</p>
-                                                <p>50-100元客单≥<em class="alt-num">25</em>份</p>
-                                                <p>100-300元客单≥<em class="alt-num">20</em>份</p>
-                                                <p>高于300元客单≥<em class="alt-num">15</em>份</p>
-                                                <p></p>
-                                            </li>
-                                            <li class="notice">
-                                                <p>优化权重建议：</p>
-                                                <p>建议不低于2期，每期5-10天，数据统计95%成功案例连续投放<em>4-6</em>周期完成爆款的打造和稳定</p>
-                                            </li>
-                                        </ul>
-                                        <div>任务开奖时间：每日<em>10点，21点</em>开奖。</div>
-                                        <div id="jingdongwen1">
-                                            用户申请流程：
-                                            <span>根据商家活动类型的不同，用户分1~6天申请。完成浏览、加购、收藏店铺
-                                                宝贝、深度访问、货比多家、浏览副宝贝、手淘问大家.等操作后，才可获得购买资格。<br>快速稳定优化商品排名、销量、宝贝基础权重。</span></div>
-                                    </div>
-                                    <div class="layui-tab-item">内容2</div>
-                                    <div class="layui-tab-item">内容3</div>
-                                    <div class="layui-tab-item">内容4</div>
-                                </div>
                             </div>
                         </div>
-                        <div class="information">
-                            <div z_information>
-                                <div class="informationTitle">
-                                    <span class="iT">基本信息:</span>
-
+                        <div class="activityType">
+                            <div class="z_activityType">
+                                <div class="activityTypeTitle">
+                                    <span class="aT">活动类型:</span>
                                 </div>
-                                <div class="shopName">
-                                    <span>*店铺名称:</span>
-                                    <div>
-                                        <select>
+                                <div class="layui-tab">
+                                    <ul class="layui-tab-title">
+                                        <li class="layui-this">爆款打造/维护</li>
+                                        <li>新品优化综合权重</li>
+                                        <li>高客单精准打造爆款（全面优化店铺权重）</li>
+                                        <li>新人必中</li>
+                                    </ul>
+                                    <div class="layui-tab-content">
+                                        <div class="layui-tab-item layui-show">
+                                            <h4><i class="iconfont icon-select"></i>快速优化关键词排名/加购率/多天回访率/全维度UV价值</h4>
+                                            <ul>
+                                                <li id="taobao1">
+                                                    <p class="gray">适合店铺类型：</p>
+                                                    <p class="taobaos">有一定销量/流量的店铺</p>
+                                                    <p class="taobaos">店铺人群标签混乱</p>
+                                                    <p class="taobaos">日常宝贝转化率低于行业均值</p>
+                                                    <p class="taobaos">排名不稳定</p>
+                                                </li>
+                                                <li class="red">
+                                                    <p>效果建议投放单期总份数：</p>
+                                                    <p>小于50元客单（0-50元）≥<em class="alt-num">30</em>份</p>
+                                                    <p>50-100元客单≥<em class="alt-num">25</em>份</p>
+                                                    <p>100-300元客单≥<em class="alt-num">20</em>份</p>
+                                                    <p>高于300元客单≥<em class="alt-num">15</em>份</p>
+                                                    <p></p>
+                                                </li>
+                                                <li class="notice">
+                                                    <p>优化权重建议：</p>
+                                                    <p>建议不低于2期，每期5-10天，数据统计95%成功案例连续投放<em>4-6</em>周期完成爆款的打造和稳定</p>
+                                                </li>
+                                            </ul>
+                                            <div>任务开奖时间：每日<em>10点，21点</em>开奖。</div>
+                                            <div id="jingdongwen1">
+                                                用户申请流程：
+                                                <span>根据商家活动类型的不同，用户分1~6天申请。完成浏览、加购、收藏店铺
+                                                宝贝、深度访问、货比多家、浏览副宝贝、手淘问大家.等操作后，才可获得购买资格。<br>快速稳定优化商品排名、销量、宝贝基础权重。</span></div>
+                                        </div>
+                                        <div class="layui-tab-item">内容2</div>
+                                        <div class="layui-tab-item">内容3</div>
+                                        <div class="layui-tab-item">内容4</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="information">
+                                <div z_information>
+                                    <div class="informationTitle">
+                                        <span class="iT">基本信息:</span>
+
+                                    </div>
+                                    <div class="shopName">
+                                        <span>*店铺名称:</span>
+                                        <div>
+                                            <select>
                                             <option>请选择</option>
                                             <option>淘宝</option>
                                             <option>淘宝</option>
                                             <option>淘宝</option>
                                             <option>淘宝</option>
                                         </select>
-                                        <a class="bd" href="/hello-ghpages/src/main/pages/management.html">绑定店铺</a>
+                                            <a class="bd" href="/src/main/pages/management.html">绑定店铺</a>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="titleActivity">
-                                    <span>*标题活动:</span>
-                                    <div>
-                                        <input type="text" />
+                                    <div class="titleActivity">
+                                        <span>*标题活动:</span>
+                                        <div>
+                                            <input type="text" />
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="babyLink">
-                                    <span>*宝贝链接:</span>
-                                    <div>
-                                        <input type="text" placeholder="此链接一律不对外开放，仅领啦管理员可查看" />
+                                    <div class="babyLink">
+                                        <span>*宝贝链接:</span>
+                                        <div>
+                                            <input type="text" placeholder="此链接一律不对外开放，仅领啦管理员可查看" />
+                                        </div>
                                     </div>
+                                    <button class="lastButton">点击获取宝贝信息</button>
                                 </div>
-                                <button class="lastButton">点击获取宝贝信息</button>
                             </div>
                         </div>
                     </div>
