--- a/src/main/pages/management.html
+++ b/src/main/pages/management.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>折多多</title>
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/management.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
-    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
-    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <link rel="stylesheet" href="/src/main/css/main.css">
+    <link rel="stylesheet" href="/src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="/src/main/css/person.css">
+    <link rel="stylesheet" href="/src/main/css/management.css">
+    <link rel="stylesheet" href="/src/main/css/iconfont.css">
+    <script src="/src/main/js/jquery.min.js"></script>
+    <script src="/src/main/layui/layui.js"></script>
 </head>
 <style>
     .layui-tab {
@@ -43,9 +42,9 @@
                 <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
-                        <li><a href="/hello-ghpages/index.html" onclick="firstPage()" title="折多多">首页</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/register.html">注册</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/login.html">登陆</a></li>
+                        <li><a href="/index.html" onclick="firstPage()" title="折多多">首页</a></li>
+                        <li><a href="/src/main/pages/register.html">注册</a></li>
+                        <li><a href="/src/main/pages/login.html">登陆</a></li>
                         <!--
 <li><a href="#overview">花生日记是什么</a></li>
 <li><a href="#reg">如何注册</a></li>
@@ -60,87 +59,88 @@
 
         </header>
 
-        <div style="height: 200px"></div>
+        <div style="height: 96px"></div>
         <div class="Sj-person">
-            <div class="left-person">
-                <div class="first_person">
-                    <a class="first_person_a" href="/hello-ghpages/src/main/pages/person.html"> 个人中心首页</a>
+            <div class="total_total">
+                <div class="left-person">
+                    <div class="first_person">
+                        <a class="first_person_a" href="/src/main/pages/person.html"> 个人中心首页</a>
+                    </div>
+                    <ul class="layui-nav layui-nav-tree" lay-filter="test">
+                        <li class="layui-nav-item ">
+                            <a href="javascript:;">精选试用管理</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/adversting.html">发布活动</a></dd>
+                                <dd><a href="/src/main/pages/activities.html">全部活动</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">折扣试用管理</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/introduce.html">模式介绍</a></dd>
+                                <dd><a href="/src/main/pages/discounts.html">发布活动</a></dd>
+                                <dd><a href="/src/main/pages/disactive.html">全部活动</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">我的账户</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/management.html">店铺管理</a></dd>
+                                <dd><a href="/src/main/pages/putforward.html">提现/账户明细</a></dd>
+                                <dd><a href="/src/main/pages/accountnumber.html">我的提现账号</a></dd>
+                                <dd><a href="/src/main/pages/safey.html">账户安全</a></dd>
+                                <dd><a href="/src/main/pages/recharge.html">账户充值</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">VIP通道</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/tovip.html">成为VIP</a></dd>
+                            </dl>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                    <li class="layui-nav-item ">
-                        <a href="javascript:;">精选试用管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/adversting.html">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/activities.html">全部活动</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">折扣试用管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/introduce.html">模式介绍</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/discounts.html">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/disactive.html">全部活动</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">我的账户</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/management.html">店铺管理</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/putforward.html">提现/账户明细</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/accountnumber.html">我的提现账号</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/safey.html">账户安全</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/recharge.html">账户充值</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">VIP通道</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/tovip.html">成为VIP</a></dd>
-                        </dl>
-                    </li>
-                </ul>
-            </div>
-            <div class="right_person">
-                <div class="manage">
-                    <div class="manage_all">
-                        <div class="manage_title">
-                            <span>绑定店铺</span>
-                            <button onclick="bdbusiness()">添加店铺</button>
-                        </div>
-                        <div class="manage_content">
-                            <ul>
-                                <li>序列</li>
-                                <li>店铺类型</li>
-                                <li>店铺名称</li>
-                                <li>旺旺/咚咚名称</li>
-                                <li>所属类目</li>
-                                <li>绑定时间</li>
-                            </ul>
-                        </div>
-                        <div class="new_shop">
-                            <h2 class="shop_title" style="font-size:16px">
-                                绑定新店铺
-                                <span style="font-size:14px;margin-left:10px">
+                <div class="right_person">
+                    <div class="manage">
+                        <div class="manage_all">
+                            <div class="manage_title">
+                                <span>绑定店铺</span>
+                                <button onclick="bdbusiness()">添加店铺</button>
+                            </div>
+                            <div class="manage_content">
+                                <ul>
+                                    <li>序列</li>
+                                    <li>店铺类型</li>
+                                    <li>店铺名称</li>
+                                    <li>旺旺/咚咚名称</li>
+                                    <li>所属类目</li>
+                                    <li>绑定时间</li>
+                                </ul>
+                            </div>
+                            <div class="new_shop">
+                                <h2 class="shop_title" style="font-size:16px">
+                                    绑定新店铺
+                                    <span style="font-size:14px;margin-left:10px">
                                     您已绑定<b style="color: #f91b1b;">0</b>个店铺，还可以添加
                                     <b style="color: #f91b1b;">1</b>个店铺
                                 </span>
-                                <span style="float: right; font-size: 18px; cursor: pointer" onclick="hide()">×</span>
-                            </h2>
-                            <div class="shop_content">
-                                <p>
-                                    店铺类型：
-                                    <input type="radio" name="shop_type" value="0" checked="checked" style="vertical-align: middle;border-radius: 50%;margin-left: 5px;cursor: pointer;" />
-                                    <span style="font-size: 20px;color: #ff5c00;vertical-align: middle; margin-right: 30px;">淘宝</span>
-                                    <input type="radio" name="shop_type" value="1" style="vertical-align: middle;border-radius: 50%;margin-left: 5px;cursor: pointer;" />
-                                    <span style="font-size: 20px;color: #ff5c00;vertical-align: middle;">京东</span>
-                                </p>
-                                <p>
-                                    店铺网址：
-                                    <input type="text" placeholder="请输入店铺网页地址" style="height: 30px;border-radius: 2px;border: 1px solid #ccc;padding-left: 5px;width: 300px;" />
-                                </p>
-                                <p>
-                                    所属类目：
-                                    <select style="height: 32px;border-radius: 2px;border: 1px solid #cccccc;margin-left: 0;">
+                                    <span style="float: right; font-size: 18px; cursor: pointer" onclick="hide()">×</span>
+                                </h2>
+                                <div class="shop_content">
+                                    <p>
+                                        店铺类型：
+                                        <input type="radio" name="shop_type" value="0" checked="checked" style="vertical-align: middle;border-radius: 50%;margin-left: 5px;cursor: pointer;" />
+                                        <span style="font-size: 20px;color: #ff5c00;vertical-align: middle; margin-right: 30px;">淘宝</span>
+                                        <input type="radio" name="shop_type" value="1" style="vertical-align: middle;border-radius: 50%;margin-left: 5px;cursor: pointer;" />
+                                        <span style="font-size: 20px;color: #ff5c00;vertical-align: middle;">京东</span>
+                                    </p>
+                                    <p>
+                                        店铺网址：
+                                        <input type="text" placeholder="请输入店铺网页地址" style="height: 30px;border-radius: 2px;border: 1px solid #ccc;padding-left: 5px;width: 300px;" />
+                                    </p>
+                                    <p>
+                                        所属类目：
+                                        <select style="height: 32px;border-radius: 2px;border: 1px solid #cccccc;margin-left: 0;">
                                         <option>请选择</option>
                                         <option>
                                             运动器械
@@ -149,49 +149,50 @@
                                             水果蔬菜
                                         </option>
                                     </select>
-                                </p>
-                                <p>
-                                    店铺名称：
-                                    <input type="text" placeholder="请输入店铺名称" style="height: 30px; border-radius: 2px;border: 1px solid #ccc;padding-left: 5px; width: 300px;" />
-                                </p>
-                                <p style="margin: 0 98px;display: inline-block;text-align: right;color: #3e3e3e;">
-                                    旺旺/咚咚名称：
-                                    <input type="text" placeholder="请输入旺旺/咚咚名称" style="height: 30px;border-radius: 2px;border: 1px solid #ccc;padding-left: 5px;" />
-                                </p>
-                                <p style="width: 56%;margin: 20px auto;text-align: left;color: #3e3e3e;">
-                                    验证码：
-                                    <input type="text" style="height: 36px;border: 1px solid #d2d2d2;border-radius: 5px;color: #cd7300;font-size: 12px;text-align: center;line-height: 36px;" />
-                                    <button style="height:36px;line-height: 36px;cursor: pointer;border-radius: 5px;border: 1px solid #d2d2d2;background-color: #dadada;width: 82px;vertical-align: middle;margin-left: 20px">
+                                    </p>
+                                    <p>
+                                        店铺名称：
+                                        <input type="text" placeholder="请输入店铺名称" style="height: 30px; border-radius: 2px;border: 1px solid #ccc;padding-left: 5px; width: 300px;" />
+                                    </p>
+                                    <p style="margin: 0 98px;display: inline-block;text-align: right;color: #3e3e3e;">
+                                        旺旺/咚咚名称：
+                                        <input type="text" placeholder="请输入旺旺/咚咚名称" style="height: 30px;border-radius: 2px;border: 1px solid #ccc;padding-left: 5px;" />
+                                    </p>
+                                    <p style="width: 56%;margin: 20px auto;text-align: left;color: #3e3e3e;">
+                                        验证码：
+                                        <input type="text" style="height: 36px;border: 1px solid #d2d2d2;border-radius: 5px;color: #cd7300;font-size: 12px;text-align: center;line-height: 36px;" />
+                                        <button style="height:36px;line-height: 36px;cursor: pointer;border-radius: 5px;border: 1px solid #d2d2d2;background-color: #dadada;width: 82px;vertical-align: middle;margin-left: 20px">
                                         复制
                                     </button>
-                                </p>
-                                <p style="margin-top:20px">
-                                    <span style="display:inline-block">
+                                    </p>
+                                    <p style="margin-top:20px">
+                                        <span style="display:inline-block">
                                         1.将验证码加到您的店铺里某个上架商品的标题上,类似这样:
                                     </span>
-                                    <span style="display:inline-block">
+                                        <span style="display:inline-block">
                                         <span class="tbImg" style="display:block">
-                                            <img src="/hello-ghpages/src/main/images/taobao_yzm.jpg">
+                                            <img src="/src/main/images/taobao_yzm.jpg">
                                         </span>
-                                    <span class="jdImg" style="display:none">
-                                            <img src="/hello-ghpages/src/main/images/jdbd.png">
+                                        <span class="jdImg" style="display:none">
+                                            <img src="/src/main/images/jdbd.png">
                                         </span>
-                                    </span>
-                                    <span style="display:inline-block">
+                                        </span>
+                                        <span style="display:inline-block">
                                         2.再将这个商品的详情页链接,复制到下面输入框
                                     </span>
-                                </p>
-                                <p>
-                                    宝贝链接：
-                                    <input type="text" placeholder="请输入修改标题后的宝贝链接" style="height: 30px; border-radius: 2px;border: 1px solid #ccc;padding-left: 5px;width: 240px;" />
-                                </p>
-                                <div style=" text-align: center;color: #3399ff;cursor: pointer;">
-                                    精选试用（了解高权重模式）
-                                </div>
-                                <div style="text-align: center">
-                                    <button style="width: 110px;height: 40px;background-color: #f7a500;border: 1px solid #e87d00;border-radius: 5px;color: #fff;text-align: center;line-height: 40px;cursor: pointer;margin: 18px auto;">
+                                    </p>
+                                    <p>
+                                        宝贝链接：
+                                        <input type="text" placeholder="请输入修改标题后的宝贝链接" style="height: 30px; border-radius: 2px;border: 1px solid #ccc;padding-left: 5px;width: 240px;" />
+                                    </p>
+                                    <div style=" text-align: center;color: #3399ff;cursor: pointer;">
+                                        精选试用（了解高权重模式）
+                                    </div>
+                                    <div style="text-align: center">
+                                        <button style="width: 110px;height: 40px;background-color: #f7a500;border: 1px solid #e87d00;border-radius: 5px;color: #fff;text-align: center;line-height: 40px;cursor: pointer;margin: 18px auto;">
                                         确认绑定
                                     </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -254,4 +255,3 @@
 </script>
 
 </html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
