--- a/src/main/pages/putforward.html
+++ b/src/main/pages/putforward.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>折多多</title>
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/putforward.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
-    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
-    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <link rel="stylesheet" href="/src/main/css/main.css">
+    <link rel="stylesheet" href="/src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="/src/main/css/person.css">
+    <link rel="stylesheet" href="/src/main/css/putforward.css">
+    <link rel="stylesheet" href="/src/main/css/iconfont.css">
+    <script src="/src/main/js/jquery.min.js"></script>
+    <script src="/src/main/layui/layui.js"></script>
 </head>
 <style>
     .layui-tab {
@@ -34,9 +33,9 @@
                 <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
-                        <li><a href="/hello-ghpages/index.html" onclick="firstPage()" title="折多多">首页</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/register.html">注册</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/login.html">登陆</a></li>
+                        <li><a href="/index.html" onclick="firstPage()" title="折多多">首页</a></li>
+                        <li><a href="/src/main/pages/register.html">注册</a></li>
+                        <li><a href="/src/main/pages/login.html">登陆</a></li>
                         <!--
 <li><a href="#overview">花生日记是什么</a></li>
 <li><a href="#reg">如何注册</a></li>
@@ -51,116 +50,118 @@
 
         </header>
 
-        <div style="height: 200px"></div>
+        <div style="height: 96px"></div>
         <div class="Sj-person">
-            <div class="left-person">
-                <div class="first_person">
-                    <a class="first_person_a" href="/hello-ghpages/src/main/pages/person.html"> 个人中心首页</a>
+            <div class="total_total">
+                <div class="left-person">
+                    <div class="first_person">
+                        <a class="first_person_a" href="/src/main/pages/person.html"> 个人中心首页</a>
+                    </div>
+                    <ul class="layui-nav layui-nav-tree" lay-filter="test">
+                        <li class="layui-nav-item ">
+                            <a href="javascript:;">精选试用管理</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/adversting.html">发布活动</a></dd>
+                                <dd><a href="/src/main/pages/activities.html">全部活动</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">折扣试用管理</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/introduce.html">模式介绍</a></dd>
+                                <dd><a href="/src/main/pages/discounts.html">发布活动</a></dd>
+                                <dd><a href="/src/main/pages/disactive.html">全部活动</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">我的账户</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/management.html">店铺管理</a></dd>
+                                <dd><a href="/src/main/pages/putforward.html">提现/账户明细</a></dd>
+                                <dd><a href="/src/main/pages/accountnumber.html">我的提现账号</a></dd>
+                                <dd><a href="/src/main/pages/safey.html">账户安全</a></dd>
+                                <dd><a href="/src/main/pages/recharge.html" s>账户充值</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:;">VIP通道</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="/src/main/pages/tovip.html">成为VIP</a></dd>
+                            </dl>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                    <li class="layui-nav-item ">
-                        <a href="javascript:;">精选试用管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/adversting.html">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/activities.html">全部活动</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">折扣试用管理</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/introduce.html">模式介绍</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/discounts.html">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/disactive.html">全部活动</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">我的账户</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/management.html">店铺管理</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/putforward.html">提现/账户明细</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/accountnumber.html">我的提现账号</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/safey.html">账户安全</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/recharge.html" s>账户充值</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">VIP通道</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="/hello-ghpages/src/main/pages/tovip.html">成为VIP</a></dd>
-                        </dl>
-                    </li>
-                </ul>
-            </div>
-            <div class="right_person">
-                <div class="putforward">
-                    <div class="layui-tab layui-tab-card">
-                        <ul class="layui-tab-title">
-                            <li class="layui-this" onclick="toWithforward()">提现</li>
-                            <li onclick="toBill()">账户明细</li>
-                            <p class="bill">
-                                收入：<span>0.00</span>元 | 支出：<strong>0.00</strong>元） | 可用余额：<span>0.00</span> 元 | 担保余额：<strong>0.00</strong>元
-                            </p>
-                        </ul>
-                        <div class="layui-tab-content" style="min-height: 800px;">
-                            <div class="layui-tab-item layui-show">
-                                <div class="warning">
-                                    <strong>
+                <div class="right_person">
+                    <div class="putforward">
+                        <div class="layui-tab layui-tab-card">
+                            <ul class="layui-tab-title">
+                                <li class="layui-this" onclick="toWithforward()">提现</li>
+                                <li onclick="toBill()">账户明细</li>
+                                <p class="bill">
+                                    收入：<span>0.00</span>元 | 支出：<strong>0.00</strong>元） | 可用余额：<span>0.00</span> 元 | 担保余额：<strong>0.00</strong>元
+                                </p>
+                            </ul>
+                            <div class="layui-tab-content" style="min-height: 800px;">
+                                <div class="layui-tab-item layui-show">
+                                    <div class="warning">
+                                        <strong>
                                         提现说明
                                     </strong><br> 1、每天提现次数最多1次。
-                                    <br> 2、提现到支付宝账户的，第三方支付平台按提现金额收取0.5%/笔的手续费，每笔手续费最低1元，最高25元；由系统代收。
-                                    <br>
+                                        <br> 2、提现到支付宝账户的，第三方支付平台按提现金额收取0.5%/笔的手续费，每笔手续费最低1元，最高25元；由系统代收。
+                                        <br>
+                                    </div>
+                                    <div class="present">
+                                        <div class="present_money">
+                                            <span>可提金额:</span>
+                                            <span><strong>0.00</strong>元</span>
+                                        </div>
+                                        <div class="present_user">
+                                            <span>提现账号:</span>
+                                            <span>支付宝</span>
+                                        </div>
+                                        <div class="present_to">
+                                            <span>提现到帐户:</span>
+                                        </div>
+                                        <div class="present_toMoney">
+                                            <span>提现金额:</span>
+                                            <input type="text" onkeyup="clearNoNum(this)" />
+                                            <span>元;</span>
+                                            <span>手续费:<span class="charge" id="shouxu"></span>元;实际提现:<span class="presentation" id="shiji"></span>元</span>
+                                        </div>
+                                        <div class="present_pwd">
+                                            <span>支付密码:</span>
+                                            <input type="password" />
+                                        </div>
+                                        <button>提交申请</button>
+                                        <p>每周二，周五处理提现，11点以后的提现，会在下一个提现日到账</p>
+                                        <p>如遇法定节假日，将顺延至节后第一个工作日</p>
+                                    </div>
                                 </div>
-                                <div class="present">
-                                    <div class="present_money">
-                                        <span>可提金额:</span>
-                                        <span><strong>0.00</strong>元</span>
-                                    </div>
-                                    <div class="present_user">
-                                        <span>提现账号:</span>
-                                        <span>支付宝</span>
-                                    </div>
-                                    <div class="present_to">
-                                        <span>提现到帐户:</span>
-                                    </div>
-                                    <div class="present_toMoney">
-                                        <span>提现金额:</span>
-                                        <input type="text" onkeyup="clearNoNum(this)" />
-                                        <span>元;</span>
-                                        <span>手续费:<span class="charge" id="shouxu"></span>元;实际提现:<span class="presentation" id="shiji"></span>元</span>
-                                    </div>
-                                    <div class="present_pwd">
-                                        <span>支付密码:</span>
-                                        <input type="password" />
-                                    </div>
-                                    <button>提交申请</button>
-                                    <p>每周二，周五处理提现，11点以后的提现，会在下一个提现日到账</p>
-                                    <p>如遇法定节假日，将顺延至节后第一个工作日</p>
-                                </div>
-                            </div>
-                            <div class="layui-tab-item">
-                                <div class="chioce">
-                                    <select>
+                                <div class="layui-tab-item">
+                                    <div class="chioce">
+                                        <select>
                                         <option>最近三个月</option>
                                         <option>昨天</option>
                                     </select>
-                                    <select>
+                                        <select>
                                         <option>
                                             所有交易类型
                                         </option>
                                     </select>
-                                    <input type="text" placeholder="输入活动名称|备注关键字" />
-                                    <button>搜索</button>
-                                </div>
-                                <p class="notices">因数据量较大，账户明细仅供查询近3个月交易明细</p>
-                                <div class="chioce_content">
-                                    <div class="chioce_title">
-                                        <ul>
-                                            <li>支付宝交易号</li>
-                                            <li>创建时间</li>
-                                            <li>名称|备注</li>
-                                            <li>金额(元)</li>
-                                            <li>状态</li>
-                                        </ul>
+                                        <input type="text" placeholder="输入活动名称|备注关键字" />
+                                        <button>搜索</button>
+                                    </div>
+                                    <p class="notices">因数据量较大，账户明细仅供查询近3个月交易明细</p>
+                                    <div class="chioce_content">
+                                        <div class="chioce_title">
+                                            <ul>
+                                                <li>支付宝交易号</li>
+                                                <li>创建时间</li>
+                                                <li>名称|备注</li>
+                                                <li>金额(元)</li>
+                                                <li>状态</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -239,4 +240,3 @@
 </script>
 
 </html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
