--- a/src/main/pages/introduce.html
+++ b/src/main/pages/introduce.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>折多多</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/src/main/css/introduce.css" />
-    <script src="/src/main/js/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="/hello-ghpages/src/main/css/introduce.css" />
+    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -23,41 +23,41 @@
                 <li class="">400≤超高客单</li>
             </ul>
             <div class="img_content">
-                <div style="display: block;"><img src="/src/main/images/dkd.jpg" alt="Alternate Text"></div>
-                <div style="display: none;"><img src="/src/main/images/zdkd.jpg" alt="Alternate Text"></div>
-                <div style="display: none;"><img src="/src/main/images/zkd.jpg" alt="Alternate Text"></div>
-                <div style="display: none;"><img src="/src/main/images/gkd.jpg" alt="Alternate Text"></div>
-                <div style="display: none;"><img src="/src/main/images/cgkd.jpg" alt="Alternate Text"></div>
+                <div style="display: block;"><img src="/hello-ghpages/src/main/images/dkd.jpg" alt="Alternate Text"></div>
+                <div style="display: none;"><img src="/hello-ghpages/src/main/images/zdkd.jpg" alt="Alternate Text"></div>
+                <div style="display: none;"><img src="/hello-ghpages/src/main/images/zkd.jpg" alt="Alternate Text"></div>
+                <div style="display: none;"><img src="/hello-ghpages/src/main/images/gkd.jpg" alt="Alternate Text"></div>
+                <div style="display: none;"><img src="/hello-ghpages/src/main/images/cgkd.jpg" alt="Alternate Text"></div>
             </div>
         </div>
     </div>
     <div class="part1">
         <h1>折扣试用能为你带来哪些好处？</h1>
         <ul>
-            <li><img src="/src/main/images/ssqz.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/ssqz.png" alt="Alternate Text">
                 <p>搜索权重</p>
             </li>
-            <li><img src="/src/main/images/rqqz.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/rqqz.png" alt="Alternate Text">
                 <p>人气权重</p>
             </li>
-            <li><img src="/src/main/images/zhpm.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/zhpm.png" alt="Alternate Text">
                 <p>综合排名</p>
             </li>
-            <li><img src="/src/main/images/syll.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/syll.png" alt="Alternate Text">
                 <p>首页流量</p>
             </li>
         </ul>
         <ul>
-            <li><img src="/src/main/images/dpcj.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/dpcj.png" alt="Alternate Text">
                 <p>店铺层级</p>
             </li>
-            <li><img src="/src/main/images/jscb.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/jscb.png" alt="Alternate Text">
                 <p>节省成本</p>
             </li>
-            <li><img src="/src/main/images/qzmj.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/qzmj.png" alt="Alternate Text">
                 <p>潜在买家</p>
             </li>
-            <li><img src="/src/main/images/ppxc.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/ppxc.png" alt="Alternate Text">
                 <p>品牌宣传</p>
             </li>
         </ul>
@@ -77,15 +77,15 @@
             <li class=""></li>
         </ol>
         <div class="part2_content">
-            <div style="display: block;"><img src="/src/main/images/lcs.png" alt="Alternate Text"></div>
-            <div style="display: none;"><img src="/src/main/images/fhje.png" alt="Alternate Text"></div>
-            <div style="display: none;"><img src="/src/main/images/lc.png" alt="Alternate Text"></div>
-            <div style="display: none;"><img src="/src/main/images/xdfb.png" alt="Alternate Text"></div>
+            <div style="display: block;"><img src="/hello-ghpages/src/main/images/lcs.png" alt="Alternate Text"></div>
+            <div style="display: none;"><img src="/hello-ghpages/src/main/images/fhje.png" alt="Alternate Text"></div>
+            <div style="display: none;"><img src="/hello-ghpages/src/main/images/lc.png" alt="Alternate Text"></div>
+            <div style="display: none;"><img src="/hello-ghpages/src/main/images/xdfb.png" alt="Alternate Text"></div>
         </div>
     </div>
     <div class="part3">
         <h1>如何发布折扣试用？</h1>
-        <img src="/src/main/images/zksy.jpg" alt="Alternate Text">
+        <img src="/hello-ghpages/src/main/images/zksy.jpg" alt="Alternate Text">
     </div>
     <div class="part4">
         <h1>常见问题解答</h1>
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="part4_btn">
-            <a href="/src/main/pages/discounts.html" target="_blank">发布折扣试用&gt;</a>
+            <a href="/hello-ghpages/src/main/pages/discounts.html" target="_blank">发布折扣试用&gt;</a>
         </div>
     </div>
 </body>
