--- a/src/main/pages/adversting.html
+++ b/src/main/pages/adversting.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>折多多</title>
-    <link rel="stylesheet" href="/src/main/css/main.css">
-    <link rel="stylesheet" href="/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/src/main/css/person.css">
-    <link rel="stylesheet" href="/src/main/css/adversting.css">
-    <link rel="stylesheet" href="/src/main/css/iconfont.css">
-    <script src="/src/main/js/jquery.min.js"></script>
-    <script src="/src/main/layui/layui.js"></script>
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/adversting.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
+    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
+    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
 </head>
 <style>
     .right_person {
@@ -35,9 +35,9 @@
                 <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
-                        <li><a href="/index.html" onclick="firstPage()" title="折多多">首页</a></li>
-                        <li><a href="/src/main/pages/register.html">注册</a></li>
-                        <li><a href="/src/main/pages/login.html">登陆</a></li>
+                        <li><a href="/hello-ghpages/index.html" onclick="firstPage()" title="折多多">首页</a></li>
+                        <li><a href="/hello-ghpages/src/main/pages/register.html">注册</a></li>
+                        <li><a href="/hello-ghpages/src/main/pages/login.html">登陆</a></li>
                         <!--
 <li><a href="#overview">花生日记是什么</a></li>
 <li><a href="#reg">如何注册</a></li>
@@ -57,38 +57,38 @@
             <div class="total_total">
                 <div class="left-person">
                     <div class="first_person">
-                        <a class="first_person_a" href="/src/main/pages/person.html"> 个人中心首页</a>
+                        <a class="first_person_a" href="/hello-ghpages/src/main/pages/person.html"> 个人中心首页</a>
                     </div>
                     <ul class="layui-nav layui-nav-tree" lay-filter="test">
                         <li class="layui-nav-item ">
                             <a href="javascript:;">精选试用管理</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="/src/main/pages/adversting.html">发布活动</a></dd>
-                                <dd><a href="/src/main/pages/activities.html">全部活动</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/adversting.html">发布活动</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/activities.html">全部活动</a></dd>
                             </dl>
                         </li>
                         <li class="layui-nav-item">
                             <a href="javascript:;">折扣试用管理</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="/src/main/pages/introduce.html">模式介绍</a></dd>
-                                <dd><a href="/src/main/pages/discounts.html">发布活动</a></dd>
-                                <dd><a href="/src/main/pages/disactive.html">全部活动</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/introduce.html">模式介绍</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/discounts.html">发布活动</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/disactive.html">全部活动</a></dd>
                             </dl>
                         </li>
                         <li class="layui-nav-item">
                             <a href="javascript:;">我的账户</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="/src/main/pages/management.html">店铺管理</a></dd>
-                                <dd><a href="/src/main/pages/putforward.html">提现/账户明细</a></dd>
-                                <dd><a href="/src/main/pages/accountnumber.html">我的提现账号</a></dd>
-                                <dd><a href="/src/main/pages/safey.html">账户安全</a></dd>
-                                <dd><a href="/src/main/pages/recharge.html">账户充值</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/management.html">店铺管理</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/putforward.html">提现/账户明细</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/accountnumber.html">我的提现账号</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/safey.html">账户安全</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/recharge.html">账户充值</a></dd>
                             </dl>
                         </li>
                         <li class="layui-nav-item">
                             <a href="javascript:;">VIP通道</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="/src/main/pages/tovip.html">成为VIP</a></dd>
+                                <dd><a href="/hello-ghpages/src/main/pages/tovip.html">成为VIP</a></dd>
                             </dl>
                         </li>
                     </ul>
@@ -174,7 +174,7 @@
                                                     <option>淘宝</option>
                                                     <option>淘宝</option>
                                                 </select>
-                                            <a class="bd" href="/src/main/pages/management.html">绑定店铺</a>
+                                            <a class="bd" href="/hello-ghpages/src/main/pages/management.html">绑定店铺</a>
                                         </div>
                                     </div>
                                     <div class="titleActivity">
