--- a/src/main/pages/management.html
+++ b/src/main/pages/management.html
@@ -11,8 +11,15 @@
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
     <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
     <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <script src="/hello-ghpages/src/main/js/select.js"></script>
 </head>
 <style>
+    .QPUI-selectbox {
+        width: 100px;
+        height: 26px;
+        line-height: 26px
+    }
+    
     .layui-tab {
         width: 848px;
         background-color: white;
@@ -218,6 +225,7 @@
     start();
 
     function start() {
+        $('select').selectbox();
         layui.use('element', function() {
             var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
             //监听导航点击
