--- a/src/main/pages/register.html
+++ b/src/main/pages/register.html
@@ -6,7 +6,6 @@
     <title>折多多</title>
     <meta name="Keywords" content="折多多,折多多官方app下载,折多多APP">
     <meta name="Description" content="折多多官方APP：3000多万人都在用的网购省钱工具。消费有收益，创业大平台，折多多邀请码:15515500039，注册自动升级超级会员，快来加入到折多多大家庭吧！">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/bootstrap.min.css">
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/owl.carousel.css">
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
@@ -25,7 +24,7 @@
 <body>
 
     <div class="banner" role="banner">
-        <header id="header">
+        <div id="header">
             <div class="header-content clearfix">
                 <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
@@ -45,7 +44,7 @@
                 <a href="#" class="nav-toggle">菜单<span></span></a>
             </div>
 
-        </header>
+        </div>
 
         <div style="height: 200px"></div>
 
@@ -133,16 +132,6 @@
     <script src="/hello-ghpages/src/main/js/carousel.min.js"></script>
     <script src="/hello-ghpages/src/main/js/main.js"></script>
     <script type="text/javascript">
-        var wdwidth = $1(document).width();
-
-        if (wdwidth > 769) {
-            $1(".address").hover(function() {
-                $1(this).find("span").show()
-            }, function() {
-                $1(this).find("span").hide()
-            });
-        }
-
         start();
 
         function toregister() {
