--- a/src/main/pages/disactive.html
+++ b/src/main/pages/disactive.html
@@ -116,12 +116,13 @@
                 <div class="disactive">
                     <div class="title">
                         <span>店铺类型</span>
-                        <select>
-                            <option>请选择</option>
-                            <option>123232</option>
-                            <option>232323</option>
-                            <option>3232323</option>
-                            <option>4233232321</option>
+                        <select id="demo-basic">
+                            <option selected value="0">---请选择---</option>
+                            <option value="1">选项二</option>
+                            <option value="2">选项二</option>
+                            <option value="3">选项三</option>
+                            <option value="4">选项四</option>
+                            <option value="5">选项五</option>
                         </select>
                         <input type="text" placeholder="请输入活动名称" class="checkAt">
                         <input type="button" class="buttonAt">
