--- a/src/main/pages/putforward.html
+++ b/src/main/pages/putforward.html
@@ -141,23 +141,22 @@
                                 </div>
                                 <div class="layui-tab-item">
                                     <div class="chioce">
-                                        <select>
-                                        <option>最近三个月</option>
-                                        <option>昨天</option>
-                                        <option>2天前</option>
-                                        <option>7天前</option>
-                                    </select>
-                                        <select>
-                                        <option>
-                                            所有交易类型
-                                        </option>
-                                        <option>
-                                            京东交易类型
-                                        </option>
-                                        <option>
-                                            淘宝交易类型
-                                        </option>
-                                    </select>
+                                        <select id="demo-basic">
+                                            <option selected value="0">---请选择---</option>
+                                            <option value="1">选项二</option>
+                                            <option value="2">选项二</option>
+                                            <option value="3">选项三</option>
+                                            <option value="4">选项四</option>
+                                            <option value="5">选项五</option>
+                                        </select>
+                                        <select id="demo-basic">
+                                            <option selected value="0">---请选择---</option>
+                                            <option value="1">xxxx</option>
+                                            <option value="2">wwww</option>
+                                            <option value="3">eeee</option>
+                                            <option value="4">bbbb</option>
+                                            <option value="5">qqqq</option>
+                                        </select>
                                         <input type="text" placeholder="输入活动名称|备注关键字" />
                                         <button>搜索</button>
                                     </div>
