--- a/src/main/pages/register.html
+++ b/src/main/pages/register.html
@@ -6,19 +6,19 @@
     <title>折多多</title>
     <meta name="Keywords" content="折多多,折多多官方app下载,折多多APP">
     <meta name="Description" content="折多多官方APP：3000多万人都在用的网购省钱工具。消费有收益，创业大平台，折多多邀请码:15515500039，注册自动升级超级会员，快来加入到折多多大家庭吧！">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/owl.carousel.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/responsive.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/register.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/style.css">
-    <script type="text/javascript" src="/hello-ghpages/src/main/js/jquery-1.6.2.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/owl.carousel.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="../layui/css/layui.css">
+    <link rel="stylesheet" href="../css/person.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="text/javascript" src="../js/jquery-1.6.2.min.js"></script>
     <script type="text/javascript">
         var $180 = $;
     </script>
-    <script type="text/javascript" src="/hello-ghpages/src/main/js/Validform_v5.3.2.js"></script>
+    <script type="text/javascript" src="../js/Validform_v5.3.2.js"></script>
 </head>
 
 <body>
@@ -61,42 +61,42 @@
                 <div class="reg-content-left">
                     <div class="layui-carousel" id="test2" style="margin-top: 15px;">
                         <div carousel-item="">
-                            <div><img src="/hello-ghpages/src/main/images/01-1.jpg"></div>
-                            <div><img src="/hello-ghpages/src/main/images/01-3.jpg"></div>
-                            <div><img src="/hello-ghpages/src/main/images/01-4.jpg"></div>
+                            <div><img src="../images/01-1.jpg"></div>
+                            <div><img src="../images/01-3.jpg"></div>
+                            <div><img src="../images/01-4.jpg"></div>
                         </div>
                     </div>
                 </div>
                 <div class="reg-content-right">
                     <form id="myForm">
                         <div class="reg-input">
-                            <input style="background: url(/hello-ghpages/src/main/images/icon_01.jpg) no-repeat 3px 6px" placeholder="设置您的用户名" type="text" name="sk_name" datatype="username" class="nat_ttv">
+                            <input style="background: url(../hello-/images/icon_01.jpg) no-repeat 3px 6px" placeholder="设置您的用户名" type="text" name="sk_name" datatype="username" class="nat_ttv">
                             <span class="Validform_checktip"></span>
                         </div>
                         <div class="reg-input">
-                            <input style="background: url(/hello-ghpages/src/main/images/icon_02.jpg) no-repeat 3px 6px" name="sk_password" value="" placeholder="设置您的密码" class="nat_ttv" type="password" datatype="/^\w{6,16}$/i" nullmsg="请填写6到16位字符！" errormsg="请填写6到16位字符！">
+                            <input style="background: url(../images/icon_02.jpg) no-repeat 3px 6px" name="sk_password" value="" placeholder="设置您的密码" class="nat_ttv" type="password" datatype="/^\w{6,16}$/i" nullmsg="请填写6到16位字符！" errormsg="请填写6到16位字符！">
                             <span class="Validform_checktip"></span>
                         </div>
                         <div class="reg-input">
-                            <input style="background: url(/hello-ghpages/src/main/images/icon_03.jpg) no-repeat 3px 6px" name="repassword" value="" placeholder="请再次输入密码" datatype="*" recheck="sk_password" type="password" nullmsg="请再输入一次密码！" errormsg="您两次输入的账号密码不一致！" class="nat_ttv">
+                            <input style="background: url(../images/icon_03.jpg) no-repeat 3px 6px" name="repassword" value="" placeholder="请再次输入密码" datatype="*" recheck="sk_password" type="password" nullmsg="请再输入一次密码！" errormsg="您两次输入的账号密码不一致！" class="nat_ttv">
                             <span class="Validform_checktip"></span>
                         </div>
                         <div class="reg-input">
-                            <input style="background: url(/hello-ghpages/src/main/images/icon_04.jpg) no-repeat 3px 6px" type="text" name="sk_qq" value="" placeholder="请输入您常用的qq号码" datatype="n4-12" id="bisqq" nullmsg="为了方便业务员与您及时沟通，请绑定QQ！" class="nat_ttv">
+                            <input style="background: url(../images/icon_04.jpg) no-repeat 3px 6px" type="text" name="sk_qq" value="" placeholder="请输入您常用的qq号码" datatype="n4-12" id="bisqq" nullmsg="为了方便业务员与您及时沟通，请绑定QQ！" class="nat_ttv">
                             <span class="Validform_checktip"></span>
                         </div>
                         <div class="reg-input">
-                            <input style="background: url(/hello-ghpages/src/main/images/icon_05.jpg) no-repeat 3px 6px" type="text" name="sk_mobile" placeholder="请输入您的手机号码" id="mobile-lk" nullmsg="为了方便业务员与您及时沟通，请绑定手机！" class="nat_ttv">
+                            <input style="background: url(../images/icon_05.jpg) no-repeat 3px 6px" type="text" name="sk_mobile" placeholder="请输入您的手机号码" id="mobile-lk" nullmsg="为了方便业务员与您及时沟通，请绑定手机！" class="nat_ttv">
                             <span class="Validform_checktip"></span>
                         </div>
                         <div class="reg-input" style="overflow:hidden;width:89%;">
-                            <input style="width: 49%; float: left; margin-left: 5px; background: url(/hello-ghpages/src/main/images/icon_06.jpg) no-repeat 3px 8px" type="text" name="captcha" value="" placeholder="请输入短信验证码" nullmsg="请输入验证码！" errormsg="请输入验证码！" datatype="/\d{5}/i"
+                            <input style="width: 49%; float: left; margin-left: 5px; background: url(../images/icon_06.jpg) no-repeat 3px 8px" type="text" name="captcha" value="" placeholder="请输入短信验证码" nullmsg="请输入验证码！" errormsg="请输入验证码！" datatype="/\d{5}/i"
                                 class="natt_px">
                             <input style="width: 40%; float: right; text-align: center; padding: 0; font-size: 14px; background-color: #fd8981; border: none; color: white; height: 44px; margin-left: 5px;" id="sendbtn" name="captcha" type="button" class="natt_px" value="发送验证码">
                             <span class="Validform_checktip"></span>
                         </div>
                         <div class="reg-yaoqing">
-                            <input style="background: url(/hello-ghpages/src/main/images/icon_07.jpg) no-repeat 3px 4px" type="text" name="sk_intive_code" class="yaoqing" placeholder="请输入您的邀请码（非必填）">
+                            <input style="background: url(../images/icon_07.jpg) no-repeat 3px 4px" type="text" name="sk_intive_code" class="yaoqing" placeholder="请输入您的邀请码（非必填）">
                         </div>
                         <div class="reg-checkbox">
                             <input type="checkbox" id="protocol">
@@ -123,31 +123,31 @@
             </div>
         </div>
     </div>
-    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
     <script type="text/javascript">
         var $1 = $;
     </script>
-    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
-    <script src="/hello-ghpages/src/main/js/fancybox.pack.js"></script>
-    <script src="/hello-ghpages/src/main/js/carousel.min.js"></script>
-    <script src="/hello-ghpages/src/main/js/main.js"></script>
+    <script src="../layui/layui.js"></script>
+    <script src="../js/fancybox.pack.js"></script>
+    <script src="../js/carousel.min.js"></script>
+    <script src="../js/main.js"></script>
     <script type="text/javascript">
         start();
 
         function toregister() {
-            window.location.href = "/hello-ghpages/src/main/pages/register.html";
+            window.location.href = "../pages/register.html";
         }
 
         function tologin() {
-            window.location.href = "/hello-ghpages/src/main/pages/login.html";
+            window.location.href = "../pages/login.html";
         }
 
         function firstPage() {
-            window.location.href = "/hello-ghpages/index.html";
+            window.location.href = "../../../index.html";
         }
 
         function loging() {
-            window.location.href = "/hello-ghpages/src/main/pages/login.html";
+            window.location.href = "../pages/login.html";
         }
 
         function start() {
