--- a/src/main/pages/activities.html
+++ b/src/main/pages/activities.html
@@ -58,7 +58,7 @@
                     <ul class="primary-nav">
                         <li><a href="../../../index.html" onclick="firstPage()" title="折多多">首页</a></li>
                         <li>
-                            <a href=../pages/register.html ">注册</a></li>
+                            <a href="../pages/register.html">注册</a></li>
                         <li><a href="../pages/login.html ">登陆</a></li>
                         <!--
 <li><a href="#overview ">花生日记是什么</a></li>
@@ -78,38 +78,38 @@
         <div class="Sj-person ">
             <div class="left-person ">
                 <div class="first_person ">
-                    <a class="first_person_a " href="/hello-ghpages/src/main/pages/person.html "> 个人中心首页</a>
+                    <a class="first_person_a " href="../pages/person.html "> 个人中心首页</a>
                 </div>
                 <ul class="layui-nav layui-nav-tree " lay-filter="test ">
                     <li class="layui-nav-item ">
                         <a href="javascript:; ">精选试用管理</a>
                         <dl class="layui-nav-child ">
-                            <dd><a href="/hello-ghpages/src/main/pages/adversting.html ">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/activities.html ">全部活动</a></dd>
+                            <dd><a href="../pages/adversting.html ">发布活动</a></dd>
+                            <dd><a href="../pages/activities.html ">全部活动</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item ">
                         <a href="javascript:; ">折扣试用管理</a>
                         <dl class="layui-nav-child ">
-                            <dd><a href="/hello-ghpages/src/main/pages/introduce.html ">模式介绍</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/discounts.html ">发布活动</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/disactive.html ">全部活动</a></dd>
+                            <dd><a href="../pages/introduce.html ">模式介绍</a></dd>
+                            <dd><a href="../pages/discounts.html ">发布活动</a></dd>
+                            <dd><a href="../pages/disactive.html ">全部活动</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item ">
                         <a href="javascript:; ">我的账户</a>
                         <dl class="layui-nav-child ">
-                            <dd><a href="/hello-ghpages/src/main/pages/management.html ">店铺管理</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/putforward.html ">提现/账户明细</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/accountnumber.html ">我的提现账号</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/safey/html ">账户安全</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/recharge.html ">账户充值</a></dd>
+                            <dd><a href="../pages/management.html ">店铺管理</a></dd>
+                            <dd><a href="../pages/putforward.html ">提现/账户明细</a></dd>
+                            <dd><a href="../pages/accountnumber.html ">我的提现账号</a></dd>
+                            <dd><a href="../pages/safey/html ">账户安全</a></dd>
+                            <dd><a href="../pages/recharge.html ">账户充值</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item ">
                         <a href="javascript:; ">VIP通道</a>
                         <dl class="layui-nav-child ">
-                            <dd><a href="/hello-ghpages/src/main/pages/tovip.html ">成为VIP</a></dd>
+                            <dd><a href="../pages/tovip.html ">成为VIP</a></dd>
                         </dl>
                     </li>
                 </ul>
