--- a/src/main/pages/person.html
+++ b/src/main/pages/person.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
     <title>折多多</title>
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
-    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
-    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../layui/css/layui.css">
+    <link rel="stylesheet" href="../css/person.css">
+    <link rel="stylesheet" href="../css/iconfont.css">
+    <script src="../js/jquery.min.js"></script>
+    <script src="../layui/layui.js"></script>
 </head>
 <script type="text/javascript">
 </script>
@@ -38,9 +38,9 @@
                 <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
-                        <li><a href="/hello-ghpages/index.html" onclick="firstPage()" title="折多多">首页</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/register.html">注册</a></li>
-                        <li><a href="/hello-ghpages/src/main/pages/login.html">登陆</a></li>
+                        <li><a href="../../../index.html" onclick="firstPage()" title="折多多">首页</a></li>
+                        <li><a href="../pages/register.html">注册</a></li>
+                        <li><a href="../pages/login.html">登陆</a></li>
                         <!--
 
 <li><a href="#overview">花生日记是什么</a></li>
@@ -61,38 +61,38 @@
             <div class="total-total">
                 <div class="left-person">
                     <div class="first_person">
-                        <a class="first_person_a" href="/hello-ghpages/src/main/pages/person.html"> 个人中心首页</a>
+                        <a class="first_person_a" href="../pages/person.html"> 个人中心首页</a>
                     </div>
                     <ul class="layui-nav layui-nav-tree" lay-filter="test">
                         <li class="layui-nav-item ">
                             <a href="javascript:;">精选试用管理</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="/hello-ghpages/src/main/pages/adversting.html">发布活动</a></dd>
-                                <dd><a href="/hello-ghpages/src/main/pages/activities.html">全部活动</a></dd>
+                                <dd><a href="../pages/adversting.html">发布活动</a></dd>
+                                <dd><a href="../pages/activities.html">全部活动</a></dd>
                             </dl>
                         </li>
                         <li class="layui-nav-item">
                             <a href="javascript:;">折扣试用管理</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="/hello-ghpages/src/main/pages/introduce.html">模式介绍</a></dd>
-                                <dd><a href="/hello-ghpages/src/main/pages/discounts.html">发布活动</a></dd>
-                                <dd><a href="/hello-ghpages/src/main/pages/disactive.html">全部活动</a></dd>
+                                <dd><a href="../pages/introduce.html">模式介绍</a></dd>
+                                <dd><a href="../pages/discounts.html">发布活动</a></dd>
+                                <dd><a href="../pages/disactive.html">全部活动</a></dd>
                             </dl>
                         </li>
                         <li class="layui-nav-item">
                             <a href="javascript:;">我的账户</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="/hello-ghpages/src/main/pages/management.html">店铺管理</a></dd>
-                                <dd><a href="/hello-ghpages/src/main/pages/putforward.html">提现/账户明细</a></dd>
-                                <dd><a href="/hello-ghpages/src/main/pages/accountnumber.html">我的提现账号</a></dd>
-                                <dd><a href="/hello-ghpages/src/main/pages/safey.html">账户安全</a></dd>
-                                <dd><a href="/hello-ghpages/src/main/pages/recharge.html">账户充值</a></dd>
+                                <dd><a href="../pages/management.html">店铺管理</a></dd>
+                                <dd><a href="../pages/putforward.html">提现/账户明细</a></dd>
+                                <dd><a href="../pages/accountnumber.html">我的提现账号</a></dd>
+                                <dd><a href="../pages/safey.html">账户安全</a></dd>
+                                <dd><a href="../pages/recharge.html">账户充值</a></dd>
                             </dl>
                         </li>
                         <li class="layui-nav-item">
                             <a href="javascript:;">VIP通道</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="/hello-ghpages/src/main/pages/tovip.html">成为VIP</a></dd>
+                                <dd><a href="../pages/tovip.html">成为VIP</a></dd>
                             </dl>
                         </li>
                     </ul>
@@ -135,23 +135,23 @@
                     <div class="secondFloor">
                         <ul class="businessList">
                             <li style="width:24%;">
-                                <a href="/hello-ghpages/src/main/pages/adversting.html"><img src="/hello-ghpages/src/main/images/fb.png">发布活动</a>
+                                <a href="../pages/adversting.html"><img src="../images/fb.png">发布活动</a>
                             </li>
                             <li style="width:24%;margin-left: 11px;">
-                                <a href="/hello-ghpages/src/main/pages/management.html"><img src="/hello-ghpages/src/main/images/bd.png">绑定店铺</a>
+                                <a href="../pages/management.html"><img src="../images/bd.png">绑定店铺</a>
                             </li>
                             <li style="width:24%;margin-left: 11px;">
-                                <a><img src="/hello-ghpages/src/main/images/ll.png">折多多客户</a>
+                                <a><img src="../images/ll.png">折多多客户</a>
                             </li>
                             <li style="width:24%;margin-left: 11px;">
-                                <a><img src="/hello-ghpages/src/main/images/dd.png">订单比对</a>
+                                <a><img src="../images/dd.png">订单比对</a>
                             </li>
                         </ul>
                     </div>
 
                     <div class="thirdFloor">
                         <div class="taobao">
-                            <img src="/hello-ghpages/src/main/images/tbrk.jpg" class="taobaoImg">
+                            <img src="../images/tbrk.jpg" class="taobaoImg">
                             <ul>
                                 <li style="width: 33%;"><a>待支付</a></li>
                                 <li style="width: 33%;margin-left: 8px;"><a>进行中</a></li>
@@ -159,7 +159,7 @@
                             </ul>
                         </div>
                         <div class="jingdong">
-                            <img src="/hello-ghpages/src/main/images/jdrk%20.jpg" class="jingD">
+                            <img src="../images/jdrk%20.jpg" class="jingD">
                             <ul>
                                 <li style="width: 33%;"><a>待支付</a></li>
                                 <li style="width: 33%;margin-left: 8px;"><a>进行中</a></li>
@@ -205,15 +205,15 @@
     })
 
     function tobeVip() {
-        window.location.href = "/hello-ghpages/src/main/pages/tovip.html";
+        window.location.href = "../pages/tovip.html";
     }
 
     function toRecharge() {
-        window.location.href = "/hello-ghpages/src/main/pages/recharge.html";
+        window.location.href = "../pages/recharge.html";
     }
 
     function toPutforward() {
-        window.location.href = "/hello-ghpages/src/main/pages/putforward.html";
+        window.location.href = "../pages/putforward.html";
     }
 </script>
 
