--- a/src/main/pages/activities.html
+++ b/src/main/pages/activities.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>折多多</title>
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/layui.css">
+    <link rel="stylesheet" href="../layui/css/layui.css">
     <link rel="stylesheet" href="../css/person.css">
     <link rel="stylesheet" href="../css/activities.css">
     <link rel="stylesheet" href="../css/iconfont.css">
